# vec-db

./: .gitignore  makefile  notes.md  readme.md
.github/workflows/: ci.yml
python-examples/kmeans/: helper.py  kmeans_simple_classification.py  kmeans_sklearn_classification.py  readme.md
python-examples/vector-db/: benchmark_clusters.py  plot.py  readme.md  test_insert.py  test_query.py
python-examples/vector-stream/: VectorStream.py  plot.py  readme.md
tests/: test_benchmark.py  test_persistent_rocksdb.py
vec-db/: Cargo.toml  pyproject.toml
vec-db/benches/: rocksdb_insert.rs
vec-db/src/: kmeans.rs  lib.rs
vec-db/src/backends/: hnsw.rs  kmeans.rs  lsh_hash.rs  min_hash.rs  mod.rs
vec-db/src/bindings/: database.rs  mod.rs  python.rs
vec-db/src/clustering/: kmeans.rs
vec-db/src/db/: simple_database.rs
vec-db/src/fileformat/: database.rs  fileformat.rs  mod.rs  simple_database.rs
vec-db/src/format/: filesystem.rs
vec-db/src/kmeans/: kmeans.rs
vec-db/src/math/: vector.rs
vec-db/src/storage/: bucket.rs  mod.rs  rocksdb.rs
vec-db/src/vector/: vector.rs
