[package]
name = "vec-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libvec_db"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rand = "0.9.2"
anyhow = "1.0.98"
rand_chacha = "0.9.0"
rocksdb = "0.22"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rocksdb_insert"
harness = false

[profile.bench]
debug = true

#[profile.release]
#debug = true
